Make issue badges inline-block for parent tickets that overflow to two lines in column.

--- a/src/sass/mixins/_issues.scss
+++ b/src/sass/mixins/_issues.scss
@@ -32,6 +32,7 @@
   a#{$parent},
   .relations > span > a#{$parent},
   .parent > a#{$parent} {
+    display: inline-block;
     background-color: $background;
     color: $color;
 
